@@ -56,6 +56,7 @@ Template for new versions:
 ## New Features
 - `stocks`: add button/hotkey for removing empty categories from the stocks list
 - `sort`: updated and reinstated military status/squad membership/burrow membership filter for work animal assignment screen
+- `logistics`: ``autoretrain`` will automatically assign trainers to your partially-trained (but not yet domesticated) livestock. this prevents children of partially-trained parents from reverting to wild if you don't notice they were born
 
 ## Fixes
 
